fixed white space on translate

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -174,3 +174,10 @@ body {
       overflow: hidden;
       padding: 4px;
     }
+        .goog-te-banner-frame.skiptranslate {
+          display: none !important;
+        }
+    
+        body {
+          top: 0px !important;
+        }
